[sc-3591] Implement training logs

--- a/apps/dashboard/src/app/knowledge-box/knowledge-box-process/knowledge-box-processes.component.html
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box-process/knowledge-box-processes.component.html
@@ -10,6 +10,16 @@
     class="warning">
     {{ 'stash.settings.processes.training.no-resources' | translate }}
   </div>
+  <div
+    *ngIf="!(cannotTrain | async)"
+    class="history">
+    <p>{{ 'stash.settings.processes.training.consult-history' | translate }}</p>
+    <pa-button
+      aspect="basic"
+      routerLink="history">
+      {{ 'training.history' | translate }}
+    </pa-button>
+  </div>
   <section *ngFor="let type of enabledTrainings | async">
     <h2>{{ 'stash.settings.processes.' + type | translate }}</h2>
     <p class="last-run">
