--- a/apps/dashboard/src/app/select/select-kb/select-kb.component.html
+++ b/apps/dashboard/src/app/select/select-kb/select-kb.component.html
@@ -4,7 +4,9 @@
   <div class="select-kb-header">
     <nsi-back-button
       class="select-kb-back"
-      link="/select"></nsi-back-button>
+      link="/select">
+      {{ 'generic.back' | translate }}
+    </nsi-back-button>
 
     <h2 class="select-kb-title">{{ account.title }}</h2>
 
