--- a/libs/sistema/src/lib/back-button/back-button.component.html
+++ b/libs/sistema/src/lib/back-button/back-button.component.html
@@ -4,5 +4,5 @@
   icon="chevron-left"
   aspect="basic"
   size="small">
-  <a [routerLink]="link">{{ 'generic.back' | translate }}</a>
+  <a [routerLink]="link"><ng-content></ng-content></a>
 </pa-button>
