--- a/apps/dashboard/src/app/knowledge-box/knowledge-box-process/knowledge-box-processes.component.scss
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box-process/knowledge-box-processes.component.scss
@@ -15,6 +15,10 @@ h2 {
   font-weight: var(--stf-font-weight-bold);
 }
 
+.history {
+  margin-top: rhythm(2);
+}
+
 .last-run {
   color: $gray-light;
   font-style: italic;
