--- a/apps/dashboard/src/app/components/navbar/navbar.component.html
+++ b/apps/dashboard/src/app/components/navbar/navbar.component.html
@@ -76,7 +76,7 @@
           *ngIf="isTrainingEnabled | async"
           class="group-items">
           <a
-            [routerLink]="kbUrl + '/processes'"
+            [routerLink]="kbUrl + '/training'"
             routerLinkActive="active"
             class="nav-link"
             [class.disabled]="!(isAdmin | async)">
