--- a/apps/dashboard/src/app/knowledge-box/knowledge-box-training/knowledge-box-training.component.html
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box-training/knowledge-box-training.component.html
@@ -1,4 +1,4 @@
-<div class="knowledge-box-processes">
+<div class="knowledge-box-training">
   <h2>{{ 'stash.side.trainings' | translate }}</h2>
   <div
     *ngIf="cannotTrain | async"
