--- a/apps/dashboard/src/app/knowledge-box/knowledge-box-training/knowledge-box-training.component.scss
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box-training/knowledge-box-training.component.scss
@@ -1,6 +1,6 @@
 @import 'variables';
 
-.knowledge-box-processes {
+.knowledge-box-training {
   width: 770px;
   max-width: 100%;
   padding: rhythm(6) rhythm(12);
