Rename Ontology module/components/route into LabelSet

--- a/apps/dashboard/src/app/components/navbar/navbar.component.html
+++ b/apps/dashboard/src/app/components/navbar/navbar.component.html
@@ -44,7 +44,7 @@
           </a>
           <a
             *ngIf="isOntologiesEnabled | async"
-            [routerLink]="kbUrl + '/ontologies'"
+            [routerLink]="kbUrl + '/label-sets'"
             routerLinkActive="active"
             class="nav-link">
             <pa-icon name="label"></pa-icon>
