--- a/apps/dashboard/src/app/resources/edit/classification/paragraph-classification/paragraph-classification.component.html
+++ b/apps/dashboard/src/app/resources/edit/classification/paragraph-classification/paragraph-classification.component.html
@@ -10,7 +10,7 @@
   <ng-template #noLabel>
     <p>
       {{ 'resource.classification.no-paragraph-labelset' | translate }}
-      <a [routerLink]="(kbUrl | async) + '/ontologies'">
+      <a [routerLink]="(kbUrl | async) + '/label-sets'">
         {{ 'resource.classification-page-link' | translate }}
       </a>
     </p>
