customize app demo for PyConFR

--- a/libs/search-widget/src/common/paragraph-result/ParagraphResult.scss
+++ b/libs/search-widget/src/common/paragraph-result/ParagraphResult.scss
@@ -25,6 +25,7 @@
 
   .paragraph-text {
     overflow-wrap: break-word;
+    font-size: var(--font-size-base);
   }
   .paragraph-text.semantic {
     font-weight: var(--font-weight-medium);
