--- a/libs/sistema/theme/tokens/_spacing.tokens.scss
+++ b/libs/sistema/theme/tokens/_spacing.tokens.scss
@@ -34,6 +34,7 @@ $rhythm: (
   56: ($spacer * 56),     //  56   unit - 448px - 28     rem
   60: ($spacer * 60),     //  60   unit - 480px - 30     rem
   64: ($spacer * 64),     //  64   unit - 512px - 32     rem
+  80: ($spacer * 80),     //  80   unit - 640px - 40     rem
   90: ($spacer * 90),     //  90   unit - 720px - 45     rem
 );
 
