--- a/apps/dashboard/src/app/label-sets/label-set-list/label-set-list.component.scss
+++ b/apps/dashboard/src/app/label-sets/label-set-list/label-set-list.component.scss
@@ -1,77 +1,21 @@
 @import 'variables';
 
-$list-breakpoint: 1550px;
-
-@mixin bordered-scrollbar {
-  &::-webkit-scrollbar {
-    width: 14px;
-    border-left: 8px solid var(--stf-gray-background);
-    background-color: #fff;
-  }
-  &::-webkit-scrollbar-thumb {
-    border: 0;
-    border-left: 8px solid var(--stf-gray-background);
-    box-shadow: inset 0 0 0 6px #000;
-  }
+:host {
+  display: block;
+  padding: rhythm(6) rhythm(12);
 }
 
-.ontology-list {
-  display: flex;
-  flex-wrap: wrap;
-  max-width: 750px;
-  margin-top: rhythm(10);
+.label-sets-management {
+  width: rhythm(50);
 
-  .ontology-card {
-    margin-bottom: rhythm(7);
-    @media (min-width: ($list-breakpoint + 1)) {
-      width: 30%;
-      margin-right: 5%;
-      &:nth-child(3n) {
-        margin-right: 0;
-      }
-    }
-    @media (max-width: $list-breakpoint) {
-      width: 47%;
-      margin-right: 6%;
-      &:nth-child(even) {
-        margin-right: 0;
-      }
-    }
+  header {
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: rhythm(6);
+  }
 
-    .ontology-card-title,
-    .ontology-card-label {
-      align-items: center;
-      width: 100%;
-      min-height: rhythm(5);
-      padding: rhythm(1) rhythm(2);
-      font-size: var(--stf-font-size-xlarge);
-      line-height: 1.2;
-    }
-
-    .ontology-card-title {
-      margin-bottom: rhythm(0.5);
-      font-weight: var(--stf-font-weight-bold);
-
-      // Fallback colors
-      background-color: $color-neutral-light;
-      color: $color-dark-stronger;
-    }
-
-    .ontology-card-labels {
-      max-height: 300px;
-      overflow-y: auto;
-      @include bordered-scrollbar();
-    }
-
-    .ontology-card-label {
-      margin-bottom: rhythm(0.25);
-      background-color: $color-light-stronger;
-      &:last-child {
-        margin-bottom: 0;
-      }
-      span {
-        @include text-truncate();
-      }
-    }
+  .labels {
+    padding: rhythm(1) rhythm(2);
   }
 }
