[sc-3846]: label set page improvements (#563)
* Rename Ontology module/components/route into LabelSet

* Remove feature flag for label-set management

* Fix label-dropdown to keep labels order (don't sort alphabetically)

* New label set management pages

  - new label set list layout with expander instead of side panel
    - button to edit/delete directly from the label set list
    - list of labels displayed when expander is expanded
  - label set addition/edition form:
    - improved label list UX
    - enable "multiple" checkbox
    - better form validation

* fix duplicated label error management + cleanup unused modules

--- a/apps/dashboard/src/app/components/navbar/navbar.component.html
+++ b/apps/dashboard/src/app/components/navbar/navbar.component.html
@@ -43,8 +43,7 @@
             <span class="nav-link-title">{{ 'stash.side.activity' | translate }}</span>
           </a>
           <a
-            *ngIf="isOntologiesEnabled | async"
-            [routerLink]="kbUrl + '/ontologies'"
+            [routerLink]="kbUrl + '/label-sets'"
             routerLinkActive="active"
             class="nav-link">
             <pa-icon name="label"></pa-icon>
