--- a/apps/dashboard/src/app/label-sets/label-set/color-picker/color-picker.component.scss
+++ b/apps/dashboard/src/app/label-sets/label-set/color-picker/color-picker.component.scss
@@ -1,18 +1,21 @@
 @import 'variables';
 
 .color-picker {
+  display: flex;
+  gap: rhythm(1.5);
+
   button {
     @include reset-button();
     cursor: pointer;
-    width: 24px;
-    height: 24px;
+    width: rhythm(3);
+    height: rhythm(3);
     user-select: none;
     &.selected {
       border: 1px solid currentColor;
     }
     &.custom {
       width: auto;
-      padding: 0 15px;
+      padding: 0 rhythm(2);
     }
   }
 }
