[sc-3249] Support labels in resource import

--- a/apps/dashboard/src/app/upload/upload-text/upload-text.component.scss
+++ b/apps/dashboard/src/app/upload/upload-text/upload-text.component.scss
@@ -42,10 +42,17 @@ app-label-field {
   display: flex;
   gap: rhythm(1);
   height: rhythm(4);
-  justify-content: space-between;
 
   &:first-child {
     border-top: 1px solid $color-neutral-lighter;
+  }
+
+  .title {
+    flex: 1 1 0;
+  }
+
+  .field {
+    width: rhythm(12);
   }
 }
 
