--- a/apps/dashboard/src/app/upload/upload-text/upload-text.component.html
+++ b/apps/dashboard/src/app/upload/upload-text/upload-text.component.html
@@ -12,6 +12,8 @@
     <span [innerHtml]="'upload.csv_description' | translate"></span>
     <br />
     <span [innerHtml]="'upload.csv_format' | translate"></span>
+    <br />
+    <span [innerHtml]="'upload.csv_labels' | translate"></span>
   </p>
 
   <ncom-hint label="CSV format details">
@@ -38,19 +40,21 @@
       hidden />
   </div>
 
-  <app-label-field
-    *ngIf="resources.length > 0"
-    size="small"
-    [(selection)]="selectedLabels"></app-label-field>
-
   <div
     class="resource-list"
     *ngIf="resources.length > 0">
     <div
       *ngFor="let resource of resources"
       class="resource">
-      <span paEllipsisTooltip>{{ resource[0] }}</span>
-      <code>{{ resource[2] }}</code>
+      <span
+        class="title"
+        paEllipsisTooltip>
+        {{ resource[0] }}
+      </span>
+      <code class="field">{{ resource[2] }}</code>
+      <span class="field">
+        {{ resource[3].length ? ('upload.labels_number' | translate: { num: resource[3].length }) : '' }}
+      </span>
     </div>
   </div>
 
