Fix [sc-3984]: label set edition bugs
- label component:
  - emit titleChange event on blur
  - don't display duplication error when there is no change done
- Prevent save button to move when a new label is added

--- a/apps/dashboard/src/app/label-sets/label-set/label/label.component.html
+++ b/apps/dashboard/src/app/label-sets/label-set/label/label.component.html
@@ -17,7 +17,7 @@
       [formControl]="title"
       (keydown.enter)="save()"
       (keydown.tab)="save()"
-      (mousedown)="preventDragAndDrop($event)" />
+      (blur)="save()" />
   </div>
   <pa-button
     *ngIf="!!label"
