--- a/apps/dashboard/src/app/label-sets/label-set/label-set.component.scss
+++ b/apps/dashboard/src/app/label-sets/label-set/label-set.component.scss
@@ -1,18 +1,29 @@
 @import 'variables';
 
+$dashboard-header-height: rhythm(9);
+$page-title-height: rhythm(8);
+$global-width: rhythm(80);
+$form-width: rhythm(50);
+$main-gap: rhythm(4);
+$padding-side-page: rhythm(12);
+$padding-vertical-page: rhythm(6);
+$footer-height: rhythm(5);
+$footer-vertical-padding: rhythm(4);
+$footer-top-margin: rhythm(2);
+
 :host {
   display: block;
-  padding: rhythm(6) rhythm(12);
+  padding: $padding-vertical-page $padding-side-page;
 }
 
 .label-set-editor {
-  width: rhythm(80);
+  width: $global-width;
 
   form {
     display: flex;
     flex-direction: column;
-    gap: rhythm(4);
-    margin: rhythm(9) 0 rhythm(4);
+    gap: $main-gap;
+    margin: rhythm(4) 0;
 
     .multiple-description {
       margin-bottom: rhythm(0.5);
@@ -47,7 +58,7 @@
 
     & > :last-child {
       flex: 0 0 auto;
-      width: rhythm(50);
+      width: $form-width;
     }
 
     &.align-top {
@@ -73,8 +84,20 @@
     }
   }
 
+  .scrollable-container {
+    max-height: calc(
+      100vh - #{$dashboard-header-height} - #{$page-title-height} - #{$padding-vertical-page} - #{$footer-height} - #{$footer-top-margin} -
+        #{$footer-vertical-padding}* 2
+    );
+    overflow-y: auto;
+  }
+
   footer {
-    margin-top: rhythm(6);
+    bottom: 0;
+    box-shadow: inset 0 1px 0 $color-neutral-light;
+    left: $global-width - $form-width + $main-gap + $padding-side-page + rhythm(1);
+    padding: $footer-vertical-padding 0;
+    position: fixed;
   }
 
   .button-container {
