--- a/libs/search-widget/src/tiles/_text-tile.scss
+++ b/libs/search-widget/src/tiles/_text-tile.scss
@@ -9,9 +9,14 @@
     transition: padding-right var(--transition-moderate);
 
     .resource-viewer-container {
-      height: calc(100vh - var(--header-height));
-      overflow: auto;
+      height: calc(100vh - var(--header-height) * 2);
+      overflow-x: hidden;
+      overflow-y: auto;
       position: relative;
+    }
+
+    .side-panel {
+      display: none;
     }
   }
 }
@@ -25,6 +30,9 @@
 
     padding-right: var(--side-panel-button-size);
 
+    .resource-viewer-container {
+      height: calc(100vh - var(--header-height) - var(--rhythm-1));
+    }
     .search-result-paragraphs {
       --search-results-margin-bottom: var(--rhythm-1_5);
 
