--- a/libs/search-widget/src/tiles/base-tile/TileHeader.scss
+++ b/libs/search-widget/src/tiles/base-tile/TileHeader.scss
@@ -34,6 +34,7 @@
 
     align-items: center;
     align-self: stretch;
+    background: var(--expanded-background-color);
     display: flex;
     gap: var(--rhythm-0_5);
     justify-content: space-between;
