--- a/libs/search-widget/src/tiles/pdf-tile/SearchResultNavigator.scss
+++ b/libs/search-widget/src/tiles/pdf-tile/SearchResultNavigator.scss
@@ -20,7 +20,7 @@
 
 @media (max-width: 447px) {
   .search-result-navigator {
-    background-color: var(--color-neutral-light);
+    background-color: var(--color-neutral-lighter);
     justify-content: space-between;
     padding: var(--rhythm-1) var(--rhythm-0_5) var(--rhythm-1) var(--rhythm-2);
   }
